# odoo-mcp

./: pyproject.toml
.github/workflows/: publish.yml
src/odoo_mcp/: cli.py  server.py
