[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoorpc-mcp"
version = "0.1.1"
description = "MCP server that exposes Odoo database records to LLMs via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Ben A", email = "717328+benagricola@users.noreply.github.com" },
]
keywords = ["mcp", "odoo", "llm", "model-context-protocol", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=0.6.0",
    "odoorpc>=0.9.0",
    "python-dotenv>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/benagricola/odoo-mcp"
Repository = "https://github.com/benagricola/odoo-mcp"
Issues = "https://github.com/benagricola/odoo-mcp/issues"
Documentation = "https://github.com/benagricola/odoo-mcp#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
odoorpc-mcp = "odoo_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/odoo_mcp"]
